--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -168,9 +168,9 @@
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Enemy\IEnemyState.cpp" />
     <ClCompile Include="NVMGenerator.cpp" />
+    <ClCompile Include="PlacementObject\PlacementObject.cpp" />
     <ClCompile Include="Stage\IStage.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="DestructibleObject\PlacementObject\PlacementObject.cpp" />
     <ClCompile Include="Player\PlayerStatus\PlayerWater.cpp" />
     <ClCompile Include="Player\PlayerStatus\PlayerHunger.cpp" />
     <ClCompile Include="Player\PlayerStatus\PlayerStamina.cpp" />
@@ -202,8 +202,8 @@
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="Enemy\IEnemyState.h" />
     <ClInclude Include="NVMGenerator.h" />
+    <ClInclude Include="PlacementObject\PlacementObject.h" />
     <ClInclude Include="Stage\IStage.h" />
-    <ClInclude Include="DestructibleObject\PlacementObject\PlacementObject.h" />
     <ClInclude Include="Player\PlayerStatus\PlayerWater.h" />
     <ClInclude Include="Player\PlayerStatus\PlayerHunger.h" />
     <ClInclude Include="Player\PlayerStatus\PlayerStamina.h" />
@@ -215,7 +215,9 @@
     <ClInclude Include="DestructibleObject\Terrain\Terrain.h" />
     <ClInclude Include="Stage\SuperFlat\SuperFlat.h" />
     <ClInclude Include="Scene\TerrainDebugScene.h" />
-    <ClInclude Include="Enemy\StandardZombie\STDZombieMove.h" />    <ClInclude Include="TerrainManager\MarchingCubeTable.h" />    <ClInclude Include="TerrainManager\TerrainManager.h" />
+    <ClInclude Include="Enemy\StandardZombie\STDZombieMove.h" />
+    <ClInclude Include="TerrainManager\MarchingCubeTable.h" />
+    <ClInclude Include="TerrainManager\TerrainManager.h" />
     <ClInclude Include="TerrainManager\TerrainRender\TerrainRender.h" />
     <ClInclude Include="TerrainManager\TerrainRender\TerrainMaterial.h" />
     <ClInclude Include="TerrainManager\TerrainWorld.h" />
