--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -27,9 +27,9 @@
     <ClCompile Include="TerrainManager\TerrainRender\TerrainMaterial.cpp" />
     <ClCompile Include="TerrainManager\TerrainWorld.cpp" />
     <ClCompile Include="Enemy\StandardZombie\StandardZombie.cpp" />
-    <ClCompile Include="DestructibleObject\PlacementObject\PlacementObject.cpp" />
     <ClCompile Include="Enemy\IEnemyState.cpp" />
     <ClCompile Include="Enemy\StandardZombie\STDZombieMove.cpp" />
+    <ClCompile Include="PlacementObject\PlacementObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -54,12 +54,14 @@
     <ClInclude Include="TerrainManager\TerrainRender\TerrainRender.h" />
     <ClInclude Include="TerrainManager\TerrainRender\TerrainMaterial.h" />
     <ClInclude Include="TerrainManager\TerrainWorld.h" />
-    <ClInclude Include="TerrainManager\MarchingCubeTable.h" />    <ClInclude Include="Enemy\StandardZombie\StandardZombie.h" />
-    <ClInclude Include="DestructibleObject\PlacementObject\PlacementObject.h" />
+    <ClInclude Include="TerrainManager\MarchingCubeTable.h" />
+    <ClInclude Include="Enemy\StandardZombie\StandardZombie.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="Enemy\IEnemyState.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Enemy\StandardZombie\STDZombieMove.h" />  </ItemGroup>
+    <ClInclude Include="Enemy\StandardZombie\STDZombieMove.h" />
+    <ClInclude Include="PlacementObject\PlacementObject.h" />
+  </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\HPGauge.png" />
     <ImageContentTask Include="Assets\sprite\HPIcon.png" />
