--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Enemy\IEnemyState.cpp" />
+    <ClCompile Include="Stage\Hill\Hill.cpp" />
     <ClCompile Include="NVMGenerator.cpp" />
     <ClCompile Include="PlacementObject\PlacementObject.cpp" />
     <ClCompile Include="Stage\IStage.cpp" />
@@ -186,6 +187,9 @@
     <ClCompile Include="Stage\SuperFlat\SuperFlat.cpp" />
     <ClCompile Include="Scene\TerrainDebugScene.cpp" />
     <ClCompile Include="Enemy\StandardZombie\STDZombieMove.cpp" />
+    <ClCompile Include="Enemy\StandardZombie\STDZombieAttack.cpp" />
+    <ClCompile Include="Enemy\StandardZombie\STDZombieTracking.cpp" />
+    <ClCompile Include="Enemy\StandardZombie\STDZombieWandering.cpp" />
     <ClCompile Include="TerrainManager\TerrainManager.cpp" />
     <ClCompile Include="TerrainManager\TerrainRender\TerrainRender.cpp" />
     <ClCompile Include="TerrainManager\TerrainRender\TerrainMaterial.cpp" />
@@ -201,6 +205,7 @@
     <ClInclude Include="GameCamera.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="Enemy\IEnemyState.h" />
+    <ClInclude Include="Stage\Hill\Hill.h" />
     <ClInclude Include="NVMGenerator.h" />
     <ClInclude Include="PlacementObject\PlacementObject.h" />
     <ClInclude Include="Stage\IStage.h" />
@@ -216,6 +221,9 @@
     <ClInclude Include="Stage\SuperFlat\SuperFlat.h" />
     <ClInclude Include="Scene\TerrainDebugScene.h" />
     <ClInclude Include="Enemy\StandardZombie\STDZombieMove.h" />
+    <ClInclude Include="Enemy\StandardZombie\STDZombieAttack.h" />
+    <ClInclude Include="Enemy\StandardZombie\STDZombieTracking.h" />
+    <ClInclude Include="Enemy\StandardZombie\STDZombieWandering.h" />
     <ClInclude Include="TerrainManager\MarchingCubeTable.h" />
     <ClInclude Include="TerrainManager\TerrainManager.h" />
     <ClInclude Include="TerrainManager\TerrainRender\TerrainRender.h" />
