--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Enemy\IEnemyState.cpp" />
+    <ClCompile Include="NVMDebugDraw.cpp" />
     <ClCompile Include="Stage\Hill\Hill.cpp" />
     <ClCompile Include="NVMGenerator.cpp" />
     <ClCompile Include="PlacementObject\PlacementObject.cpp" />
@@ -205,6 +206,7 @@
     <ClInclude Include="GameCamera.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="Enemy\IEnemyState.h" />
+    <ClInclude Include="NVMDebugDraw.h" />
     <ClInclude Include="Stage\Hill\Hill.h" />
     <ClInclude Include="NVMGenerator.h" />
     <ClInclude Include="PlacementObject\PlacementObject.h" />
