--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -36,6 +36,7 @@
     <ClCompile Include="Navigation\NVMGenerator.cpp" />
     <ClCompile Include="Navigation\AStar.cpp" />
     <ClCompile Include="Navigation\NavigationAgent.cpp" />
+    <ClCompile Include="DestroyObject\DestroyObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -73,6 +74,7 @@
     <ClInclude Include="Navigation\NVMGenerator.h" />
     <ClInclude Include="Navigation\AStar.h" />
     <ClInclude Include="Navigation\NavigationAgent.h" />
+    <ClInclude Include="DestroyObject\DestroyObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\HPGauge.png" />
