--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -37,6 +37,7 @@
     <ClCompile Include="Navigation\AStar.cpp" />
     <ClCompile Include="Navigation\NavigationAgent.cpp" />
     <ClCompile Include="DestroyObject\DestroyObject.cpp" />
+    <ClCompile Include="Tool\Tool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -75,6 +76,7 @@
     <ClInclude Include="Navigation\AStar.h" />
     <ClInclude Include="Navigation\NavigationAgent.h" />
     <ClInclude Include="DestroyObject\DestroyObject.h" />
+    <ClInclude Include="Tool\Tool.h" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\HPGauge.png" />
