--- a/Maybe3DaysToDie/Game/Game.vcxproj
+++ b/Maybe3DaysToDie/Game/Game.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="TerrainManager\TerrainRender\TerrainRender.cpp" />
     <ClCompile Include="TerrainManager\TerrainRender\TerrainMaterial.cpp" />
     <ClCompile Include="TerrainManager\TerrainWorld.cpp" />
+    <ClCompile Include="Save\TerrainSave\TerrainSave.cpp" />
     <ClCompile Include="Tool\Tool.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -236,6 +237,7 @@
     <ClInclude Include="TerrainManager\TerrainRender\TerrainRender.h" />
     <ClInclude Include="TerrainManager\TerrainRender\TerrainMaterial.h" />
     <ClInclude Include="TerrainManager\TerrainWorld.h" />
+    <ClInclude Include="Save\TerrainSave\TerrainSave.h" />
     <ClInclude Include="Tool\Tool.h" />
   </ItemGroup>
   <ItemGroup>
