--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -38,6 +38,7 @@
     <ClCompile Include="Navigation\NavigationAgent.cpp" />
     <ClCompile Include="DestroyObject\DestroyObject.cpp" />
     <ClCompile Include="Tool\Tool.cpp" />
+    <ClCompile Include="Save\TerrainSave\TerrainSave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -77,6 +78,7 @@
     <ClInclude Include="Navigation\NavigationAgent.h" />
     <ClInclude Include="DestroyObject\DestroyObject.h" />
     <ClInclude Include="Tool\Tool.h" />
+    <ClInclude Include="Save\TerrainSave\TerrainSave.h" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\HPGauge.png" />
