--- a/Maybe3DaysToDie/Game/Game.vcxproj.filters
+++ b/Maybe3DaysToDie/Game/Game.vcxproj.filters
@@ -40,6 +40,7 @@
     <ClCompile Include="Tool\Tool.cpp" />
     <ClCompile Include="Save\TerrainSave\TerrainSave.cpp" />
     <ClCompile Include="BlockManager\BlockManager.cpp" />
+    <ClCompile Include="Load\LoadingByChunk.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Stage.h" />
@@ -81,6 +82,7 @@
     <ClInclude Include="Tool\Tool.h" />
     <ClInclude Include="Save\TerrainSave\TerrainSave.h" />
     <ClInclude Include="BlockManager\BlockManager.h" />
+    <ClInclude Include="Load\LoadingByChunk.h" />
   </ItemGroup>
   <ItemGroup>
     <ImageContentTask Include="Assets\sprite\HPGauge.png" />
